--- a/NEWS
+++ b/NEWS
@@ -8,7 +8,7 @@
 # and this notice are preserved. This file is offered as-is, without any
 # warranty.
 
-* Noteworthy changes in release ?.? (????-??-??) [?]
+* Noteworthy changes in release 2019.01.06 (2019-01-06) [stable]
 
   The Autoconf Archive now has its own organization on Github. Therefore, the
   mirror has moved to https://github.com/autoconf-archive/autoconf-archive. The
