--- a/NEWS
+++ b/NEWS
@@ -8,7 +8,10 @@
 # and this notice are preserved. This file is offered as-is, without any
 # warranty.
 
-* Noteworthy changes in release ?.? (????-??-??) [?]
+* Noteworthy changes in release 2021.02.19 (2021-02-19) [stable]
+
+  The macros AX_CHECK_PCRE2 and AX_PROG_ROBOT have been added. Many other
+  macros have received updates.
 
 * Noteworthy changes in release 2019.01.06 (2019-01-06) [stable]
 
