AX_CC_FOR_BUILD: deprecate in favor of AX_PROG_CC_FOR_BUILD
The AX_PROG_CC_FOR_BUILD has seen a lot more updates than
AX_CC_FOR_BUILD, and is generally way more complete.  The latter
hardcoded `gcc` as the native compiler fallback and lacks any of
the standard $build- prefix searches.

It also uses non-standard cache vars -- it's using the bfd_cv_xxx
namespace instead of the ax_cv_xxx namespace everything else does.

Otherwise, the macros largely have the same intention: to find a
compiler for the build system, and setup the exe extension.  So
deprecate AX_CC_FOR_BUILD and have it redirect automatically.

--- a/NEWS
+++ b/NEWS
@@ -10,6 +10,8 @@
 
 * Noteworthy changes in release ?.? (????-??-??) [?]
 
+  AX_CC_FOR_BUILD was deprecated in favor of AX_PROG_CC_FOR_BUILD.
+
 * Noteworthy changes in release 2021.02.19 (2021-02-19) [stable]
 
   The macros AX_CHECK_PCRE2 and AX_PROG_ROBOT have been added. Many other
