Update copyright headers and bump version for upcoming release.

--- a/NEWS
+++ b/NEWS
@@ -1,14 +1,14 @@
 #+TITLE: GNU Autoconf Archive NEWS             -*- mode:org;fill-column:79; -*-
 #+STARTUP: showall
 #
-# Copyright (c) 2021 Autoconf Archive Maintainers <autoconf-archive-maintainers@gnu.org>
+# Copyright (c) 2022 Autoconf Archive Maintainers <autoconf-archive-maintainers@gnu.org>
 #
 # Copying and distribution of this file, with or without modification, are
 # permitted in any medium without royalty provided the copyright notice
 # and this notice are preserved. This file is offered as-is, without any
 # warranty.
 
-* Noteworthy changes in release ?.? (????-??-??) [?]
+* Noteworthy changes in release 2022.02.11 (2022-02-11) [stable]
 
   AX_CC_FOR_BUILD was deprecated in favor of AX_PROG_CC_FOR_BUILD.
 
