--- a/NEWS
+++ b/NEWS
@@ -8,7 +8,9 @@
 # and this notice are preserved. This file is offered as-is, without any
 # warranty.
 
-* Noteworthy changes in release ?.? (????-??-??) [?]
+* Noteworthy changes in release 2022.09.03 (2022-09-03) [stable]
+
+  Please refer to the ChangeLog file for a list of changes.
 
 * Noteworthy changes in release 2022.02.11 (2022-02-11) [stable]
 
