--- a/TODO
+++ b/TODO
@@ -7,6 +7,8 @@
 # and this notice are preserved. This file is offered as-is, without any
 # warranty.
 
+* DEPRECATE PERL
+
 * TODO Mark obsolete macros as such in the texinfo documentation
 * TODO Improve submission guide lines on the web site
 ** Patch submissions should put the original authors on Cc.
